[gd_scene load_steps=15 format=2]

[ext_resource path="res://bgs/new/revolver/revolver2.png" type="Texture" id=1]
[ext_resource path="res://bgs/new/revolver/revolver1.png" type="Texture" id=2]
[ext_resource path="res://bgs/new/revolver/revolver3.png" type="Texture" id=3]
[ext_resource path="res://bgs/new/revolver/revolver6.png" type="Texture" id=4]
[ext_resource path="res://bgs/new/revolver/revolver5.png" type="Texture" id=5]
[ext_resource path="res://bgs/new/revolver/revolver4.png" type="Texture" id=6]
[ext_resource path="res://scripts/revolvers.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "6",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 132, 256.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75, 256 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 62.75, 256.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 71.25, 256.75 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 80.5, 256 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 89.5, 257 )

[node name="Node2D" type="Node2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "6"
centered = false
script = ExtResource( 7 )

[node name="Area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
position = Vector2( 131, 256.5 )
shape = SubResource( 2 )

[node name="Area2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
position = Vector2( 338, 256 )
shape = SubResource( 3 )

[node name="Area3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area3"]
position = Vector2( 475.25, 255.5 )
shape = SubResource( 4 )

[node name="Area4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area4"]
position = Vector2( 609.75, 255.75 )
shape = SubResource( 5 )

[node name="Area5" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area5"]
position = Vector2( 762.5, 256 )
shape = SubResource( 6 )

[node name="Area6" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area6"]
position = Vector2( 933.5, 256 )
shape = SubResource( 7 )

[connection signal="input_event" from="Area1" to="AnimatedSprite" method="_on_Area1_input_event"]
[connection signal="input_event" from="Area2" to="AnimatedSprite" method="_on_Area2_input_event"]
[connection signal="input_event" from="Area3" to="AnimatedSprite" method="_on_Area3_input_event"]
[connection signal="input_event" from="Area4" to="AnimatedSprite" method="_on_Area4_input_event"]
[connection signal="input_event" from="Area5" to="AnimatedSprite" method="_on_Area5_input_event"]
[connection signal="input_event" from="Area6" to="AnimatedSprite" method="_on_Area6_input_event"]
